--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   permission_handler: ^12.0.1
+  image_picker: ^1.0.7
+  file_picker: ^8.0.0+1
+  video_player: ^2.8.2
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this
+  assets:
+    - assets/videos/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
